force-app/main/default/objects/Onboarding_File__c/Onboarding_File__c.object-meta.xml
<CustomObject>
    <label>Onboarding File</label>
    <nameField>
        <displayFormat>{DD}{MM}{YYYY}-{0000}</displayFormat>
        <label>Onboarding File</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Onboarding Files</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>