force-app/main/default/objects/Onboarding_File__c/fields/OF_TXT_AccountJobId__c.field-meta.xml
<CustomField>
    <fullName>OF_TXT_AccountJobId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Job Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>