force-app/main/default/objects/Onboarding_File__c/fields/OF_TXT_JobId__c.field-meta.xml
<CustomField>
    <fullName>OF_TXT_JobId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Job Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>